duvet/src/citation/snapshots/duvet__citation__tree__tests__simple__tokens.snap
---
source: duvet/src/citation/tree.rs
assertion_line: 382
expression: "tokenize(\"citation\")"

---
[
    Type(
        "citation",
    ),
]
