duvet/src/citation/snapshots/duvet__citation__tree__tests__simple__tree.snap
---
source: duvet/src/citation/tree.rs
assertion_line: 382
expression: "parse(\"citation\")"

---
Ok(
    Type(
        Type(
            0,
        ),
    ),
)
